fixed visibility popups

--- a/blocks/popup-add/popup-add.css
+++ b/blocks/popup-add/popup-add.css
@@ -1,7 +1,8 @@
 .popup-add {
+  display: flex;
   visibility: hidden;
   opacity: 0;
-  transition: opacity 0.5s, visibility 0s;
+  transition: visibility 0.4s linear, opacity 0.4s linear;
   position: fixed;
   top: 0;
   right: 0;
