--- a/blocks/popup-edit-profile/_opened/popup_opened.css
+++ b/blocks/popup-edit-profile/_opened/popup_opened.css
@@ -2,5 +2,4 @@
   display: flex;
   visibility: visible;
   opacity: 1;
-  transition: visibility 0s, opacity 0.5s;
 }
