--- a/blocks/popup-image/popup-image.css
+++ b/blocks/popup-image/popup-image.css
@@ -1,7 +1,8 @@
 .popup-image {
+  display: flex;
   visibility: hidden;
   opacity: 0;
-  transition-delay: visibility 0s, opacity 0.5s linear;
+  transition: visibility 0.4s linear, opacity 0.4s linear;
   position: fixed;
   top: 0;
   right: 0;
